--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -33,6 +33,18 @@
     <string name="last_week">Settimana scorsa</string>
     <string name="local_history">Locale</string>
     <string name="remote_history">Remoto</string>
+
+    <!-- Charts -->
+    <string name="charts">Classifiche</string>
+    <string name="back_button_desc">Indietro</string>
+    <string name="no_title">Nessun titolo</string>
+    <string name="unknown_artist">Artista sconosciuto</string>
+    <string name="unknown_item_type">Tipo dell'elemento sconosciuto</string>
+    <string name="loading_charts">Caricamento della classifica...</string>
+    <string name="retry_button">Riprova</string>
+    <string name="album_cover_desc">Cover dell'album</string>
+    <string name="top_music_videos">I migliori video musicali</string>
+    <string name="trending">Di tendenza</string>
     
     <!-- Stats -->
     <string name="most_played_songs">Brani più ascoltati</string>
@@ -83,7 +95,7 @@
     <string name="playlist_is_empty">La playlist è vuota</string>
     <string name="remove_download_playlist_confirm">Vuoi veramente rimuovere tutti i brani della playlist \"%s\" dalla sezione dei brani scaricati?</string>
     <string name="delete_playlist_confirm">Vuoi veramente rimuovere la playlist \"%s\"?</string>
-    <string name="elements_selected">%d elemento selezionato</string>
+    <string name="elements_selected">%1$d elementi selezionati</string>
     <string name="allows_for_sync_witch_youtube">Nota: questo attiva la sincronizzazione con YouTube Music. Tale azione NON è modificabile successivamente.</string>
     
     <!-- Button -->
@@ -98,7 +110,10 @@
     <string name="start_radio">Avvia radio</string>
     <string name="play">Riproduci</string>
     <string name="play_next">Riproduci come successiva</string>
+    <string name="added_to_play_next">Aggiunto come prossimo brano</string>
+    
     <string name="add_to_queue">Metti in coda</string>
+    <string name="added_to_queue">Aggiunto alla coda</string>
     <string name="add_to_library">Aggiungi a libreria</string>
     <string name="remove_from_library">Rimuovi da libreria</string>
     <string name="remove_from_playlist">Rimuovi dalla playlist</string>
@@ -253,12 +268,11 @@
 
     <!-- Settings -->
     <string name="settings">Impostazioni</string>
-    <string name="login_settings">Login settings</string>
+    <string name="login_settings">Impostazioni dell'accesso</string>
     <string name="use_login_for_browse">Accedi per il contenuto premium</string>
     <string name="use_login_for_browse_desc">Si possono visualizzare gli album esclusivi solo se accedi con un account premium</string>
 
     <string name="general_settings">Impostazioni generali</string>
-    
     
     <string name="appearance">Aspetto</string>
     <string name="theme">Tema</string>
@@ -271,8 +285,12 @@
     <string name="follow_theme">Segui il tema</string>
     <string name="gradient">Gradiente</string>
     <string name="player_background_blur">Sfuma</string>
+    <string name="player_buttons_style">Colori dei bottoni del riproduttore</string>
+    <string name="default_style">Predefiniti</string>
+    <string name="secondary_color_style">Secondari</string>
     <string name="enable_squiggly_slider">Abilita cursore ondulato</string>
     <string name="enable_swipe_thumbnail">Attiva la possibilità di cambiare brano scorrendo sulla copertina</string>
+    <string name="swipe_song_to_add">Scorri il brano verso destra per riprodurlo come successivo o verso destra per aggiungerlo alla coda</string>
     <string name="pure_black">Nero</string>
     <string name="customize_navigation_tabs">Personalizza le schede di navigazione</string>
     <string name="player">Lettore</string>
@@ -306,7 +324,6 @@
     <string name="token_adv_login_description">Questo è un metodo ADVANZATO per accedere. Come alternativa al portale web, puoi inserire o aggiornare direttamente il tuo token di accesso qui. Per esempio, questo può velocizzare l\'accesso su più dispositivi. Tieni presente che qualsiasi formato di token non valido che l\'app non riesce ad analizzare non sarà accettato</string>
     <string name="ytm_sync">Sincronizza automaticamente il tuo account di YouTube Music</string>
     <string name="general">Generale</string>
-    
     <string name="content_language">Lingua predefinita dei contenuti</string>
     <string name="content_country">Paese predefinito dei contenuti</string>
     <string name="system_default">Predefinito di sistema</string>
@@ -347,7 +364,11 @@
     <string name="auto_skip_next_on_error_desc">Garantisci la tua esperienza continua di ascolto</string>
     <string name="stop_music_on_task_clear">Interrompi la musica per cancellare l\'attività</string>
     <string name="equalizer">Equalizzatore</string>
-
+    <string name="min_playback_duration_title">Durata minima della riproduzione</string>
+    <string name="min_playback_duration_description">La minima quantità di un brano che deve essere riprodotta prima di essere considerata come \"ascoltata\"</string>
+    <string name="percentage_format">%d%%</string>
+    <string name="minimum_playback_duration">Durata minima della riproduzione</string>
+    
     <string name="storage">Archiviazione</string>
     <string name="cache">Cache</string>
     <string name="image_cache">Cache delle immagini</string>
@@ -360,6 +381,8 @@
     <string name="max_song_cache_size">Grandezza massima della cache dei brani</string>
     <string name="clear_song_cache">Pulisci la cache dei brani</string>
     <string name="size_used">%s usati</string>
+    <string name="clear_song_cache_dialog">Sei sicuro di voler eliminare tutti i brani in cache?</string>
+    <string name="clear_downloads_dialog">Sei sicuro di voler eliminare tutti i brani scaricati?</string>
     
     <string name="privacy">Privacy</string>
     <string name="listen_history">Cronologia degli ascolti</string>
@@ -388,7 +411,8 @@
     <string name="options">Opzioni</string>
     <string name="preview">Anteprima</string>
     <string name="login_failed">Accesso non effettuato</string>
-
+    <string name="not_logged_in_youtube">Disconnesso da YouTube</string>
+    
     <string name="enable_discord_rpc">Attiva Rich Presence</string>
 
     <string name="default_links">Apri link supportati</string>
