--- a/app/src/main/res/values-DE/strings.xml
+++ b/app/src/main/res/values-DE/strings.xml
@@ -444,5 +444,5 @@
     <string name="remove_from_cache">Aus Cache entfernen</string>
     <string name="top_music_videos">Top Musikvideos</string>
     <string name="trending">Im Trend</string>
-    <string name="swipe_song_to_add">WNach rechts wischen, um den nächsten Song abzuspielen, oder nach links um ihn zur Warteschlange hinzuzufügen.</string>
+    <string name="swipe_song_to_add">Nach rechts wischen, um den nächsten Song abzuspielen, oder nach links um ihn zur Warteschlange hinzuzufügen.</string>
 </resources>
