--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="details">Details</string>
     <string name="edit">Edit</string>
     <string name="start_radio">Start radio</string>
+    <string name="starting_radio">Starting radio</string>
     <string name="play">Play</string>
     <string name="play_next">Play next</string>
     <string name="add_to_queue">Add to queue</string>
