feat: implement shuffle playlist first feature in MusicService
- Added a new preference key for shuffling original playlist items before similar content.
- Updated MusicService to handle the new shuffle logic based on user preference.
- Enhanced PlayerSettings UI to include a toggle for the shuffle playlist first option.
- Added corresponding string resources for the new feature in both English and Italian.

This feature improves user control over playback order during shuffling.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -286,6 +286,8 @@
     <string name="audio_normalization">Audio normalization</string>
     <string name="auto_skip_next_on_error">Auto skip to next song when error occurs</string>
     <string name="auto_skip_next_on_error_desc">Ensure your continuous playback experience</string>
+    <string name="shuffle_playlist_first">Shuffle playlist/album first</string>
+    <string name="shuffle_playlist_first_desc">When shuffling, play all songs from the original playlist/album before similar content</string>
     <string name="stop_music_on_task_clear">Stop music on task clear</string>
     <string name="equalizer">Equalizer</string>
 
